<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Movie Trailers</string>
    <string name="rating">Rating</string>
    <string name="Play">Play Video</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="newMovie">New Movie</string>
    <string name="save">Save Movie</string>
    <string name="delete">Delete Movie</string>
    <string name="toast_title">Show toast message</string>

    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="forward">Fast Forward</string>
    <string name="rewind">Rewind</string>


    <string name="selectImage">Select Image</string>
    <string name="selectTrailer">Select Trailer</string>
</resources>
