<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent">


    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:weightSum="1.0">
        <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="@string/pause"
                android:id="@+id/btnPause" android:layout_column="0" android:layout_span="0"
                />
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="@string/stop"
                android:id="@+id/btnStop" android:layout_column="1" android:layout_span="0"
                />
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="@string/Play"
                android:id="@+id/btnPlay" android:layout_column="0" android:layout_span="1"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rewind"
                android:id="@+id/btnRev" android:layout_weight=".5"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forward"
                android:id="@+id/btnFor" android:layout_weight=".5"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <VideoView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight=".5"
                android:id="@+id/videoView" android:layout_span="3" android:layout_column="0"/>
    </TableRow>
</TableLayout>